# to-do-applicaction-with-db

./: .gitignore  _types.py  database.db  db.py  dependencies.py  main.py  pyproject.toml  requirements.txt  tags.py
documentation/: body_examples.py
middlewares/: middlewares.py
models/: __init__.py  category.py  task.py
routers/: __init__.py  tasks.py  users.py
schemas/: category_body.py  task_body.py
tests/: test_tasks_router.py
