[tool.poetry]
name = "todoapp-fastapi"
version = "0.1.0"
description = "API WEB"
authors = ["KevinED11 <mendez_kael@hotmail.com>"]
license = "MTI"
readme = "README.md"
packages = [{ include = "todoapp_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
email-validator = "^2.0.0.post2"
sqlmodel = "^0.0.8"
fastapi = "0.100.0b1"
black = "^23.3.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
mypy = "^1.4.1"
pytest = "^7.4.0"
aiocache = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
